--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Walid Dib # the main title
 tagline: I talk about gamedev and startups # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A blog by Walid Dib featuring learning insights into game development with Godot, and building startups in the Middle East.
+  Blog by Walid Dib featuring learning insights into game development with Godot, and building startups in the Middle East.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
