Update config. remove ratings, and make image optional

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,17 +1,23 @@
 backend:
   name: git-gateway
   branch: main # Branch to update (optional; defaults to master)
-media_folder: "assets/img/uploads" # Media files will be stored in the repo under images/uploads
+
+media_folder: "assets/img/uploads" # Media files will be stored in the repo under this folder
+public_folder: "/assets/img/uploads" # The folder where the files will be served from (URL path)
+
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
-    folder: "_posts/blog" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
+    label: "Blog" # Used in the CMS UI
+    folder: "_posts" # The path to the folder where the blog posts are stored
+    create: true # Allow users to create new blog posts
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    fields: # The fields for each document, usually in front matter
-      - { label: "Layout", name: "layout", widget: "hidden", default: "blog" }
+    fields: # The fields for each document, usually stored in front matter
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Featured Image", name: "thumbnail", widget: "image" }
-      - { label: "Rating (scale of 1-5)", name: "rating", widget: "number" }
+      - {
+          label: "Featured Image",
+          name: "thumbnail",
+          widget: "image",
+          required: false,
+        }
       - { label: "Body", name: "body", widget: "markdown" }
