--- a/_config.yml
+++ b/_config.yml
@@ -98,11 +98,11 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "public/assets/img/favicons/android-chrome-192x192.png"
+avatar: "assets/img/favicons/android-chrome-512x512.png"
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+social_preview_image: "assets/img/uploads/android-chrome-512x512.png" # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
